--- a/Source/Microsoft.Teams.Apps.EmployeeTraining/ClientApp/public/locales/en-US/translation.json
+++ b/Source/Microsoft.Teams.Apps.EmployeeTraining/ClientApp/public/locales/en-US/translation.json
@@ -53,8 +53,8 @@
   "eventPhotoStep1": "Event image",
   "uploadPhotoStep1": "Upload image",
   "changePhotoStep1": "Change image",
-  "eventNameStep1": "Event name",
-  "eventNamePlaceholderStep1": "Type a short clear name",
+  "eventNameStep1": "Etkinlik ismi",
+  "eventNamePlaceholderStep1": "Kısa ve açık bir etkinlik ismi yazın",
   "eventTypeStep1": "Event type",
   "selectEventTypePlaceholder": "Select a type",
   "selectCategoryPlaceholder": "Select a category",
